@@ -1,4 +1,7 @@
 release 1.1.5 (2010)
+- Fixed issue 437
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=437
+  Support the parsing of the Cache-Control header.
 - Fixed issue 454
   https://jersey.dev.java.net/issues/show_bug.cgi?id=454
   Scanning of classes WEB-INF/classes in a war in ear now works for JBoss 5.x
